--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://unpkg.com/nes.css@latest/css/nes.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Pokemon</title>
 </head>
 <body>
     <div class="wrapper">
@@ -36,6 +36,6 @@
     
 
 
-   <script src="app2.js"></script>
+   <script src="app.js"></script>
 </body>
 </html>
